# disk-cleaner

./: .gitignore  README.md  disk-cleaner.Tests.ps1  disk-cleaner.ps1  disk-cleaner.toml
docs/: executive-summary.md
docs/research/: cpu-profiling-tools.md
java/: build.ps1  build.sh
java/src/: DiskCleaner.java
java/src/config/: TomlConfig.java
java/src/features/: Analyze.java  Clean.java  CompactWsl.java  Monitor.java  Search.java
java/src/model/: CleanProfile.java  CleanerContext.java
main/config/: history.json  profiles.toml
main/features/analyze/: analyze.ps1
main/features/analyze/tests/: disk-usage.Tests.ps1
main/features/clean/: clean.ps1  clean.sh
main/features/compact-wsl/tests/: compact-wsl.Tests.ps1
main/features/monitor/: monitor.ps1
main/features/monitor/tests/: monitor.Tests.ps1
main/features/search/tests/: search.int.Tests.ps1
main/src/: clean-profile.sh
main/src/lib/: CleanProfile.ps1  CleanerContext.ps1  OutputWriter.ps1  Spinner.ps1  common.sh
powershell/: README.md
powershell/main/features/analyze/: analyze.ps1
powershell/main/features/analyze/tests/: analyze.Tests.ps1
powershell/main/features/clean/tests/: clean.Tests.ps1  clean.int.Tests.ps1
powershell/main/features/compact-wsl/: compact-wsl.ps1
powershell/main/features/search/: search.ps1  search.sh
powershell/main/features/search/tests/: search.Tests.ps1
powershell/main/src/lib/: CleanProfile.ps1  TomlConfig.ps1  common.sh  toml-parser.sh
rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/main/features/analyze/: Cargo.toml
rust/main/features/analyze/src/: lib.rs
rust/main/features/analyze/src/api/: traits.rs
rust/main/features/analyze/src/core/: analyzer.rs  disk_usage.rs  mod.rs
rust/main/features/analyze/src/saf/: mod.rs
rust/main/features/analyze/tests/: analyze_int_test.rs
rust/main/features/clean/: Cargo.toml
rust/main/features/clean/src/api/: traits.rs
rust/main/features/clean/src/core/: cleaner.rs  mod.rs
rust/main/features/clean/src/saf/: mod.rs
rust/main/features/clean/tests/: clean_e2e_test.rs  clean_int_test.rs
rust/main/features/compact_wsl/: Cargo.toml
rust/main/features/compact_wsl/src/api/: traits.rs
rust/main/features/compact_wsl/src/core/: compactor.rs  mod.rs
rust/main/features/compact_wsl/src/saf/: mod.rs
rust/main/features/compact_wsl/tests/: compact_wsl_int_test.rs
rust/main/features/config/: Cargo.toml
rust/main/features/config/src/api/: mod.rs  traits.rs  types.rs
rust/main/features/config/src/core/: context.rs  mod.rs  profile_loader.rs  toml_config.rs
rust/main/features/config/src/saf/: mod.rs
rust/main/features/config/tests/: config_int_test.rs
rust/main/features/monitor/: Cargo.toml
rust/main/features/monitor/src/api/: traits.rs
rust/main/features/monitor/src/core/: history.rs  mod.rs  monitor.rs
rust/main/features/monitor/src/saf/: mod.rs
rust/main/features/monitor/tests/: monitor_int_test.rs
rust/main/features/search/: Cargo.toml
rust/main/features/search/src/api/: traits.rs
rust/main/features/search/src/core/: mod.rs  searcher.rs
rust/main/features/search/src/saf/: mod.rs
rust/main/features/search/tests/: search_e2e_test.rs  search_int_test.rs
