[workspace]
members = [
    "main/features/config",
    "main/features/clean",
    "main/features/search",
    "main/features/analyze",
    "main/features/monitor",
    "main/features/compact_wsl",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/sweengineeringlabs/disk-cleaner"
authors = ["SWE Engineering Labs"]
