[package]
name = "disk-cleaner-clean"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Clean feature: removes build artifacts from detected projects"

[dependencies]
disk-cleaner-config = { path = "../config" }
rayon = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
