[package]
name = "disk-cleaner-monitor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Monitor feature: build process tracking and run history"

[dependencies]
disk-cleaner-config = { path = "../config" }
sysinfo = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
